# ChangeLog for app-text/wdiff
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.30 2009/04/08 09:44:45 armin76 Exp $

  08 Apr 2009; Raúl Porcel <armin76@gentoo.org> wdiff-0.5-r2.ebuild:
  Add ~arm/~s390/~sh

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> wdiff-0.5-r2.ebuild:
  Remove pointless USE=build support.

  06 Jul 2008; <ricmm@gentoo.org> wdiff-0.5-r2.ebuild:
  Drop to ~mips due to unstable deps

  12 May 2008; Jeroen Roovers <jer@gentoo.org> wdiff-0.5-r2.ebuild:
  Marked ~hppa (bug #221791).

  12 May 2008; Markus Rothe <corsair@gentoo.org> wdiff-0.5-r2.ebuild:
  Added ~ppc64; bug #221791

  12 May 2008; Alexis Ballier <aballier@gentoo.org> wdiff-0.5-r2.ebuild:
  keyword ~x86-fbsd

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> wdiff-0.5-r2.ebuild:
  Fix bug #89250

  18 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> wdiff-0.5-r2.ebuild:
  Stable on MIPS.

  22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> wdiff-0.5-r2.ebuild:
  Stable on sparc

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> wdiff-0.5-r2.ebuild:
  Mark 0.5-r2 stable on alpha

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> wdiff-0.5-r2.ebuild:
  stable on ia64

  26 Jul 2005; Aron Griffis <agriffis@gentoo.org> wdiff-0.5-r2.ebuild:
  add ~alpha ~ia64

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> wdiff-0.5-r2.ebuild:
  Stable on ppc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> wdiff-0.5-r2.ebuild:
  stable on amd64

  21 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Updated metadata (no-herd => shell-tools)

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org> wdiff-0.5-r2.ebuild:
  Fix stupid dependency on sys-libs/libtermcap-compat (i.e. remove it) #64212.

*wdiff-0.5-r2 (05 Sep 2004)

  05 Sep 2004; Malcolm Lashley <malc@gentoo.org>
  +files/wdiff-0.5-avoid-wraps.diff, +wdiff-0.5-r2.ebuild: