@@ -1,6 +1,9 @@
 # ChangeLog for app-text/wdiff
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.30 2009/04/08 09:44:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.31 2009/04/13 02:21:27 darkside Exp $
+
+  13 Apr 2009; Jeremy Olexa <darkside@gentoo.org> wdiff-0.5-r2.ebuild:
+  QA: respect CC, bug 243628
 
   08 Apr 2009; Raúl Porcel <armin76@gentoo.org> wdiff-0.5-r2.ebuild:
   Add ~arm/~s390/~sh
